--- a/graphics.html
+++ b/graphics.html
@@ -3,6 +3,9 @@
 <head>
 </head>
 <body>
+ <img id = "gun" scr = "gun.png" width = "500" height = "250">
+ <img id = "reloadGun" scr = "reload.png" width = "500" height = "250">
+ <script scr = "animation.js"></script>
  <script scr = "engine.js"></script>
 </body>
 </html
