--- a/graphics.html
+++ b/graphics.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
+<style>
+#gun{
+position: absolute;
+    right: 0;
+    bottom: 0;
+ }
+ #reload.png{
+ position:absolute;
+  right: 0;
+  bottom: 0;
+ }
+ </style>
 </head>
 <body>
  <img id = "gun" scr = "gun.png" width = "500" height = "250">
