--- a/graphics.html
+++ b/graphics.html
@@ -15,6 +15,10 @@ position: absolute;
  </style>
 </head>
 <body>
+ <img id = "skyscrapper" scr = "skyscrapper.png">
+ <img id = "monster" scr = "monster1.png">
+ <img id = "burningcar" scr = "burningcar.jpg">
+ <img id = "wall" scr = "wallPixel.jpeg">
  <img id = "gun" scr = "gun.png" width = "500" height = "250">
  <img id = "reloadGun" scr = "reload.png" width = "500" height = "250">
  <script scr = "animation.js"></script>
