--- a/graphics.html
+++ b/graphics.html
@@ -12,9 +12,13 @@ position: absolute;
   right: 0;
   bottom: 0;
  }
+ #background{
+ background-size: cover;
+ }
  </style>
 </head>
 <body>
+ <img id = "background" scr = "background.jpg">
  <img id = "gun" scr = "gun.png" width = "500" height = "250">
  <img id = "reloadGun" scr = "reload.png" width = "500" height = "250">
  <script scr = "animation.js"></script>
