--- a/graphics.html
+++ b/graphics.html
@@ -4,12 +4,12 @@
 <style>
 #gun{
 position: absolute;
-    right: 0;
+    left: 50%;
     bottom: 0;
  }
  #reloadGun{
  position:absolute;
-  right: 0;
+  left: 50%;
   bottom: 0;
  }
  #background{
