--- a/graphics.html
+++ b/graphics.html
@@ -5,12 +5,12 @@
 #gun{
 position: absolute;
     left: 50%;
-    bottom: 0;
+    bottom: 0px;
  }
  #reloadGun{
  position:absolute;
   left: 50%;
-  bottom: 0;
+  bottom: 0px;
  }
  #background{
  background-size: cover;
