--- a/graphics.html
+++ b/graphics.html
@@ -18,6 +18,7 @@ position: absolute;
  </style>
 </head>
 <body>
+    <p id = "update"></p>
  <img id = "background" scr = "background.jpg">
  <img id = "gun" scr = "gun.png" width = "250" height = "250">
  <img id = "reloadGun" scr = "reload.png" width = "250" height = "250">
