--- a/graphics.html
+++ b/graphics.html
@@ -18,7 +18,8 @@ position: absolute;
  </style>
 </head>
 <body>
-    <p id = "update"></p>
+    <p id = "text"></p>
+    <p id = "ammo"></p>
  <img id = "background" scr = "background.jpg">
  <img id = "gun" scr = "gun.png" width = "250" height = "250">
  <img id = "reloadGun" scr = "reload.png" width = "250" height = "250">
