--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ body.style.display = "none";
 function fake3D(){
 var i;
 for(i = 0;i < totalMonsters;i++){
-var monster = document.getElementById(monsterId[i]);
+var monster = document.getElementById("monster" + i);
 var monsterSize = 0;
 ammoText.innerHtml = "ammo: " + ammo;
 if(monsterZ[i] > z){
