--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@ position: absolute;
  <img id = "gun" scr = "gun.png" width = "250" height = "250">
  <img id = "reloadGun" scr = "reload.png" width = "250" height = "250">
     <script>
-       var gun = document.getElementById("gun.png");
-var reloadGun = document.getElementById("reload.png");
+       var gun = document.getElementById("gun");
+var reloadGun = document.getElementById("reloadGun");
 
 reloadGun.style.display = "none";
 
