--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ var ammoText = document.getElementById("ammo");
  var j;
  for(j = 0;j < objects;j++){
  var object = document.createElement("img");
- object.setAttribute("id", "object" + i);
+ object.setAttribute("id", "object" + j);
  object.setAttribute("style", "bottom: 200px");
  var randomNum = Math.floor(Math.random() * 2);
  if(randomNum == 0){
