--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ var ammoText = document.getElementById("ammo");
   var randomZ = Math.floor(Math.random() * 20000) - 10000;
   objectX.push(randomX);
   objectZ.push(randomZ);
-  objectId.push("object" + i);
+  objectId.push("object" + j);
   document.body.appendChild(object);
  }
 
