--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@ for(i = 0;i < totalMonsters;i++){
   monster.setAttribute("id", "monster" + monsters);
   monster.setAttribute("scr", "PnuematicPysco.github.io/monster1.png");
   monster.setAttribute("style", "bottom: 200px");
+  monster.setAttribute("width", "100");
+  monster.setAttribute("height", "100");
  var randomX = Math.floor(Math.random() * 20000) - 10000;
   var randomZ = Math.floor(Math.random() * 20000) - 10000;
   monsterX.push(randomX);
