--- a/index.html
+++ b/index.html
@@ -159,24 +159,24 @@ ammoText.innerHtml = "ammo: " + ammo;
 if(monsterZ[i] > z){
 var graphicZ = monsterZ[i] - z - 500;//make move and pos (num * 5) to balance it out
 if(graphicZ > 0){
-monster.height = ""+graphicZ - graphicZ - graphicZ+"px";
-monster.width = ""+graphicZ - graphicZ - graphicZ+"px";
+monster.style.height = ""+graphicZ - graphicZ - graphicZ+"px";
+monster.style.width = ""+graphicZ - graphicZ - graphicZ+"px";
 monsterSize = graphicZ - graphicZ - graphicZ;
 }else{
-monster.height = ""+graphicZ + graphicZ + graphicZ+"px";
-monster.width = ""+graphicZ + graphicZ + graphicZ+"px";
+monster.style.height = ""+graphicZ + graphicZ + graphicZ+"px";
+monster.style.width = ""+graphicZ + graphicZ + graphicZ+"px";
 monsterSize = graphicZ + graphicZ + graphicZ;
 }
 monster.style.transform = "translateX("+x - monsterX[i] - rotate+"px)";
 }else{
 var graphicZ = monsterZ[i] - z + 500;//make move and pos (num * 5) to balance it out
 if(graphicZ > 0){
-monster.height = ""+graphicZ - graphicZ - graphicZ+"px";
-monster.width = ""+graphicZ - graphicZ - graphicZ+"px";
+monster.style.height = ""+graphicZ - graphicZ - graphicZ+"px";
+monster.style.width = ""+graphicZ - graphicZ - graphicZ+"px";
 monsterSize = graphicZ - graphicZ - graphicZ;
 }else{
-monster.height = ""+graphicZ + graphicZ + graphicZ+"px";
-monster.width = ""+graphicZ + graphicZ + graphicZ+"px";
+monster.style.height = ""+graphicZ + graphicZ + graphicZ+"px";
+monster.style.width = ""+graphicZ + graphicZ + graphicZ+"px";
 monsterSize = graphicZ + graphicZ + graphicZ;
 }
 var oppositeRotate = x - monsterX[i] - rotate;
@@ -184,13 +184,13 @@ monster.style.transform = "translateX("+oppositeRotate + oppositeRotate + opposi
 }
 if(monsterShot[i] == "Shot"){
 monster.style.scr = "PnuematicPysco.github.io/bleedingMonster.png";
-monster.height = ""+monsterSize * 0.3+"px";
-monster.width = ""+monsterSize+"px";
+monster.style.height = ""+monsterSize * 0.3+"px";
+monster.style.width = ""+monsterSize+"px";
 }
 if(monsterShot[i] == "bleeding"){
 monster.style.scr = "PnuematicPysco.github.io/bleedingMonster.png";
-monster.height = ""+monsterSize+"px";
-monster.width = ""+monsterSize+"px";
+monster.style.height = ""+monsterSize+"px";
+monster.style.width = ""+monsterSize+"px";
 }
 }
 }
