--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ position: absolute;
  background-size: cover;
  }
  </style>
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
     <p id = "text"></p>
@@ -91,8 +92,6 @@ for(i = 0;i < totalMonsters;i++){
   monster.setAttribute("id", "monster" + monsters);
   monster.setAttribute("scr", "PnuematicPysco.github.io/monster1.png");
   monster.setAttribute("style", "bottom: 200px");
-  monster.setAttribute("width", "100");
-  monster.setAttribute("height", "100");
  var randomX = Math.floor(Math.random() * 20000) - 10000;
   var randomZ = Math.floor(Math.random() * 20000) - 10000;
   monsterX.push(randomX);
@@ -159,24 +158,24 @@ ammoText.innerHtml = "ammo: " + ammo;
 if(monsterZ[i] > z){
 var graphicZ = monsterZ[i] - z - 500;//make move and pos (num * 5) to balance it out
 if(graphicZ > 0){
-monster.style.height = ""+graphicZ - graphicZ - graphicZ+"px";
-monster.style.width = ""+graphicZ - graphicZ - graphicZ+"px";
+ $("#monster" + i).height(graphicZ - graphicZ - graphicZ);
+$("#monster" + i).width(graphicZ - graphicZ - graphicZ);
 monsterSize = graphicZ - graphicZ - graphicZ;
 }else{
-monster.style.height = ""+graphicZ + graphicZ + graphicZ+"px";
-monster.style.width = ""+graphicZ + graphicZ + graphicZ+"px";
+$("#monster" + i).height(graphicZ + graphicZ + graphicZ);
+$("#monster" + i).width(graphicZ + graphicZ + graphicZ);
 monsterSize = graphicZ + graphicZ + graphicZ;
 }
 monster.style.transform = "translateX("+x - monsterX[i] - rotate+"px)";
 }else{
 var graphicZ = monsterZ[i] - z + 500;//make move and pos (num * 5) to balance it out
 if(graphicZ > 0){
-monster.style.height = ""+graphicZ - graphicZ - graphicZ+"px";
-monster.style.width = ""+graphicZ - graphicZ - graphicZ+"px";
+$("#monster" + i).height(graphicZ - graphicZ - graphicZ);
+$("#monster" + i).width(graphicZ - graphicZ - graphicZ);
 monsterSize = graphicZ - graphicZ - graphicZ;
 }else{
-monster.style.height = ""+graphicZ + graphicZ + graphicZ+"px";
-monster.style.width = ""+graphicZ + graphicZ + graphicZ+"px";
+$("#monster" + i).height(graphicZ + graphicZ + graphicZ);
+$("#monster" + i).width(graphicZ + graphicZ + graphicZ);
 monsterSize = graphicZ + graphicZ + graphicZ;
 }
 var oppositeRotate = x - monsterX[i] - rotate;
@@ -184,13 +183,13 @@ monster.style.transform = "translateX("+oppositeRotate + oppositeRotate + opposi
 }
 if(monsterShot[i] == "Shot"){
 monster.style.scr = "PnuematicPysco.github.io/bleedingMonster.png";
-monster.style.height = ""+monsterSize * 0.3+"px";
-monster.style.width = ""+monsterSize+"px";
+$("#monster" + i).height(monsterSize * 0.3);
+$("#monster" + i).width(monsterSize);
 }
 if(monsterShot[i] == "bleeding"){
 monster.style.scr = "PnuematicPysco.github.io/bleedingMonster.png";
-monster.style.height = ""+monsterSize+"px";
-monster.style.width = ""+monsterSize+"px";
+$("#monster" + i).width(monsterSize);
+$("#monster" + i).height(monsterSize);
 }
 }
 }
@@ -203,21 +202,21 @@ var object = document.getElementById(objectId[i]);
 if(objectZ[i] > z){
 var graphicZ = objectZ[i] - z - 500;//make move and pos (num * 5) to balance it out
 if(graphicZ > 0){
-object.style.height = ""+graphicZ - graphicZ - graphicZ+"px";
-object.style.width = ""+graphicZ - graphicZ - graphicZ+"px";
+$("#object" + i).width(graphicZ - graphicZ - graphicZ);
+$("#object" + i).height(graphicZ - graphicZ - graphicZ);
 }else{
-object.style.height = ""+graphicZ + graphicZ + graphicZ+"px";
-object.style.width = ""+graphicZ + graphicZ + graphicZ+"px";
+$("#object" + i).width(graphicZ + graphicZ + graphicZ);
+$("#object" + i).width(graphicZ + graphicZ + graphicZ);
 }
 object.style.transform = "translateX("+x - objectX[i] - rotate+"px)";
 }else{
 var graphicZ = objectZ[i] - z + 500;//make move and pos (num * 5) to balance it out
 if(graphicZ > 0){
-object.style.height = ""+graphicZ - graphicZ - graphicZ+"px";
-object.style.width = ""+graphicZ - graphicZ - graphicZ+"px";
+$("#object" + i).width(graphicZ - graphicZ - graphicZ);
+$("#object" + i).width(graphicZ - graphicZ - graphicZ);
 }else{
-object.style.height = ""+graphicZ + graphicZ + graphicZ+"px";
-object.style.width = ""+graphicZ + graphicZ + graphicZ+"px";
+$("#object" + i).width(graphicZ + graphicZ + graphicZ);
+$("#object" + i).width(graphicZ + graphicZ + graphicZ);
 }
 var oppositeRotate = x - objectX[i] - rotate;
 object.style.transform = "translateX("+oppositeRotate + oppositeRotate + oppositeRotate+"px)";
