--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ $("#monster" + i).height(graphicZ + graphicZ + graphicZ);
 $("#monster" + i).width(graphicZ + graphicZ + graphicZ);
 monsterSize = graphicZ + graphicZ + graphicZ;
 }
-monster.style.transform = "translateX("+x - monsterX[i] - rotate+"px)";
+$('#monster + i').style('transform', 'translateX(' + x - monsterX[i] - rotate + ')');
 }else{
 var graphicZ = monsterZ[i] - z + 500;//make move and pos (num * 5) to balance it out
 if(graphicZ > 0){
@@ -179,15 +179,15 @@ $("#monster" + i).width(graphicZ + graphicZ + graphicZ);
 monsterSize = graphicZ + graphicZ + graphicZ;
 }
 var oppositeRotate = x - monsterX[i] - rotate;
-monster.style.transform = "translateX("+oppositeRotate + oppositeRotate + oppositeRotate+"px)";
+$('#monster + i').style('transform', 'translateX(' + oppositeRotate + oppositeRotate + oppositeRotate + ')');
 }
 if(monsterShot[i] == "Shot"){
-monster.style.scr = "PnuematicPysco.github.io/bleedingMonster.png";
+$("#monster" + i).attr("scr", "PnuematicPysco.github.io/bleedingMonster.png");
 $("#monster" + i).height(monsterSize * 0.3);
 $("#monster" + i).width(monsterSize);
 }
 if(monsterShot[i] == "bleeding"){
-monster.style.scr = "PnuematicPysco.github.io/bleedingMonster.png";
+$("#monster" + i).attr("scr", "PnuematicPysco.github.io/bleedingMonster.png");
 $("#monster" + i).width(monsterSize);
 $("#monster" + i).height(monsterSize);
 }
@@ -205,21 +205,21 @@ if(graphicZ > 0){
 $("#object" + i).width(graphicZ - graphicZ - graphicZ);
 $("#object" + i).height(graphicZ - graphicZ - graphicZ);
 }else{
-$("#object" + i).width(graphicZ + graphicZ + graphicZ);
+$("#object" + i).height(graphicZ + graphicZ + graphicZ);
 $("#object" + i).width(graphicZ + graphicZ + graphicZ);
 }
-object.style.transform = "translateX("+x - objectX[i] - rotate+"px)";
+$('#object + i').style('transform', 'translateX(' + x - objecteX[i] - rotate + ')');
 }else{
 var graphicZ = objectZ[i] - z + 500;//make move and pos (num * 5) to balance it out
 if(graphicZ > 0){
-$("#object" + i).width(graphicZ - graphicZ - graphicZ);
+$("#object" + i).height(graphicZ - graphicZ - graphicZ);
 $("#object" + i).width(graphicZ - graphicZ - graphicZ);
 }else{
-$("#object" + i).width(graphicZ + graphicZ + graphicZ);
+$("#object" + i).height(graphicZ + graphicZ + graphicZ);
 $("#object" + i).width(graphicZ + graphicZ + graphicZ);
 }
 var oppositeRotate = x - objectX[i] - rotate;
-object.style.transform = "translateX("+oppositeRotate + oppositeRotate + oppositeRotate+"px)";
+$('#object + i').style('transform', 'translateX(' + oppositeRotate + oppositeRotate + oppositeRotate + ')');
 }
 }
 }
