--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ $("#monster" + i).height(graphicZ + graphicZ + graphicZ);
 $("#monster" + i).width(graphicZ + graphicZ + graphicZ);
 monsterSize = graphicZ + graphicZ + graphicZ;
 }
-$('#monster + i').style('transform', 'translateX(' + x - monsterX[i] - rotate + ')');
+$('#monster' + i).css('transform', 'translateX(' + x - monsterX[i] - rotate + ')');
 }else{
 var graphicZ = monsterZ[i] - z + 500;//make move and pos (num * 5) to balance it out
 if(graphicZ > 0){
@@ -179,7 +179,7 @@ $("#monster" + i).width(graphicZ + graphicZ + graphicZ);
 monsterSize = graphicZ + graphicZ + graphicZ;
 }
 var oppositeRotate = x - monsterX[i] - rotate;
-$('#monster + i').style('transform', 'translateX(' + oppositeRotate + oppositeRotate + oppositeRotate + ')');
+$("#monster" + i).css('transform', 'translateX(' + oppositeRotate + oppositeRotate + oppositeRotate + ')');
 }
 if(monsterShot[i] == "Shot"){
 $("#monster" + i).attr("src", "PnuematicPysco.github.io/bleedingMonster.png");
@@ -208,7 +208,7 @@ $("#object" + i).height(graphicZ - graphicZ - graphicZ);
 $("#object" + i).height(graphicZ + graphicZ + graphicZ);
 $("#object" + i).width(graphicZ + graphicZ + graphicZ);
 }
-$('#object + i').style('transform', 'translateX(' + x - objecteX[i] - rotate + ')');
+$('#object' + i).css('transform', 'translateX(' + x - objectX[i] - rotate + ')');
 }else{
 var graphicZ = objectZ[i] - z + 500;//make move and pos (num * 5) to balance it out
 if(graphicZ > 0){
@@ -219,7 +219,7 @@ $("#object" + i).height(graphicZ + graphicZ + graphicZ);
 $("#object" + i).width(graphicZ + graphicZ + graphicZ);
 }
 var oppositeRotate = x - objectX[i] - rotate;
-$('#object + i').style('transform', 'translateX(' + oppositeRotate + oppositeRotate + oppositeRotate + ')');
+$('#object' + i).css('transform', 'translateX(' + oppositeRotate + oppositeRotate + oppositeRotate + ')');
 }
 }
 }
