--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ position: absolute;
  <img id = "background" src = "PnuematicPysco.github.io/background.jpg">
  <img id = "gun" src = "PnuematicPysco.github.io/gun.png" width = "250" height = "250">
  <img id = "reloadGun" src = "PnuematicPysco.github.io/reload.png" width = "250" height = "250">
- 
+    <script src = "engine.js"></script>
+    <script src = "animation.js"></script>
 </body>
 </html>
